[package]
name = "poly-nou"
version = "0.1.0"
authors = ["ahirner <a.hirner@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
nannou = {"git" = "https://github.com/nannou-org/nannou"}
nphysics2d = "0.15.1"
rand = "^0.7"
rand_distr = "^0.2"
lyon = "^0.15"
